[package]
name = "nvm"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "nvm"
path = "src/bin/main.rs"
required-features = ["bin"]

[features]
bin = ["std"]
std = ["libffi", "libloading", "thiserror"]

[dependencies]
libffi = { version = "3.2", optional = true }
libloading = { version = "0.8", optional = true }
thiserror = { version = "1.0", optional = true }
