[package]
name = "nvm"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "nvm"
path = "src/bin/main.rs"
required-features = ["bin"]

[features]
bin = ["libffi", "libloading", "std", "thiserror"]
std = []

[dependencies]
bytemuck = "1.13"
libffi = { version = "3.2", optional = true }
libloading = { version = "0.8", optional = true }
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
thiserror = { version = "1.0", optional = true }
