[package]
name = "nvm"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "nvm"
path = "src/bin/main.rs"
required-features = ["bin"]

[profile.release]
lto = true
strip = true

[features]
bin = ["std"]
std = ["libffi", "libloading", "thiserror"]
8bit = []
16bit = []
32bit = []
64bit = []
128bit = []

[build-dependencies]
build_const = { version = "0.2" }

[dependencies]
build_const = { version = "0.2", default-features = false }
bytemuck = "1.13"
cfg-if = "1.0"
libffi = { version = "3.2", optional = true }
libloading = { version = "0.8", optional = true }
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
thiserror = { version = "1.0", optional = true }
